@@ -7,3 +7,4 @@ Rafael Antognolli <antognolli@profusion.mobi>
 Jérôme Pinot <ngc891@gmail.com>
 Pierre Le Magourou <pierre.lemagourou@openwide.fr>
 Hugo Camboulive <hugo.camboulive@zodiacaerospace.com>
+Sohyun Kim <anna1014.kim@samsung.com>
